--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 5001
 URL = mongodb+srv://yagneshacharya11:YagneshMongo@cluster0.nbivnek.mongodb.net/?retryWrites=true&w=majority
+KEY = 744fhbe74ye
