--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.1"
-  },  
+    "mongoose": "^8.1.1",
+    "nodemailer": "^6.9.9"
+  },
   "devDependencies": {
     "nodemon": "^3.0.3"
   }
