--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
+    "nanoid": "^3.3.7",
     "nodemailer": "^6.9.9"
   },
   "devDependencies": {
